--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1482,3 +1482,54 @@ keywords = "Meta-learning systems "
   pages =       "930--945",
   URL =         "http://dx.doi.org/10.1109/18.256500",
 }
+
+@InProceedings{conf/cvpr/BiswasP13,
+  title =       "Simultaneous Active Learning of Classifiers \&
+                 Attributes via Relative Feedback",
+  author =      "Arijit Biswas and Devi Parikh",
+  publisher =   "IEEE",
+  year =        "2013",
+  bibdate =     "2014-07-31",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/cvpr/cvpr2013.html#BiswasP13",
+  booktitle =   "CVPR",
+  \crossref =    "conf/cvpr/2013",
+  pages =       "644--651",
+  \URL =         "http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6596161",
+}
+
+@InProceedings{conf/iconip/GuJC14a,
+  title =       "Combining Active Learning and Semi-supervised Learning
+                 Using Local and Global Consistency",
+  author =      "Yingjie Gu and Zhong Jin and Steve C. Chiu",
+  bibdate =     "2014-10-22",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/iconip/iconip2014-1.html#GuJC14a",
+  booktitle =   "ICONIP (1)",
+  booktitle =   "Neural Information Processing - 21st International
+                 Conference, {ICONIP} 2014, Kuching, Malaysia, November
+                 3-6, 2014. Proceedings, Part {I}",
+  publisher =   "Springer",
+  year =        "2014",
+  volume =      "8834",
+  editor =      "Chu Kiong Loo and Keem Siah Yap and Kok Wai Wong and
+                 Andrew Teoh Beng Jin and Kaizhu Huang",
+  ISBN =        "978-3-319-12636-4",
+  pages =       "215--222",
+  series =      "Lecture Notes in Computer Science",
+  \URL =         "http://dx.doi.org/10.1007/978-3-319-12637-1",
+}
+
+@Article{journals/prl/PatraB12,
+  title =       "A cluster-assumption based batch mode active learning technique",
+  author =      "Swarnajyoti Patra and Lorenzo Bruzzone",
+  journal =     "Pattern Recognition Letters",
+  year =        "2012",
+  number =      "9",
+  volume =      "33",
+  bibdate =     "2012-05-08",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/prl/prl33.html#PatraB12",
+  pages =       "1042--1048",
+  \URL =         "http://dx.doi.org/10.1016/j.patrec.2012.01.015",
+}
