--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -148,6 +148,8 @@ $\val=\{|a| \mid \forall a\in A(X),\nom(a)=1\}$\\ \hline
 %    val nonHumanNumAttsNames = "\"#classes\",\"#atributos\",\"#exemplos\"," +
 %       "\"#exemplos/#atributos\",\"%nominais\",\"log(#exs)\",\"log(#exs/#atrs)\"," +
 
+metafeat = correl spearm entre queries de: Clu, Ageucl, Agmanh e Agmaha
+
 c45    5nn   maj
 3buds
 0.252 0.227 0.283 qtd de grupos = 94 qtd de metaexemplos: 1974 Winner nenhum*
