--- a/experimentos.tex
+++ b/experimentos.tex
@@ -22,6 +22,15 @@ a parcela mais representativa das estratégias seja mantida e
 a diversidade dos algoritmos de aprendizado escolhidos seja verificada.
 
 \subsection{Diversidade dos algoritmos de aprendizado}\label{algs}
+\ano{colocar svm na tabela e dizer que foi excluído por ter ido muito ruim ou deixar?
+prov devido à necessidade de ajuste de parâmetros}
+
+\esb{quando a pessoa não sabe que classificador é adequado à base,
+é melhor ela adotar uma estratégia agnóstica,
+assim ela não compromete sua amostragem e pode,
+posteriormente, quando já tiver os rótulos,
+escolher o melhor classificador de forma mais apropriada.}
+
 Uma forma de ilustrar a diversidade entre os modelos gerados
 pelos diferentes algoritmos de aprendizado é por meio da similaridade
 entre suas acurácias.
