--- a/introducao.tex
+++ b/introducao.tex
@@ -151,16 +151,17 @@ Especificamente, há as seguintes restrições de escopo:
  \item consulta pela classe (não por valores de atributos, por exemplo);
  \item monorrótulo;
  \item distribuição estacionária;
- \item custos uniformes;
- \item oráculo único e consistente (sempre a mesma resposta para um mesmo ex.);
- \item atributos sem valores faltantes;
+ \item custo por erro de classificação uniforme;
+ \item custo por consulta uniforme;
+ \item oráculo único e constante sujeito a ruído;
  \item os domínios dos atributos nominais são previamente conhecidos;
+ \item atributos sem valores faltantes;
  \item consulta \ing{um a um}{on-line}.
 \end{itemize}
 
 \section{Estrutura do documento}\label{estrutura}
-A notação matemática e a terminologia adotadas e a revisão da literatura das áreas
-envolvidas neste trabalho são apresentadas no Capítulo \ref{contexto}.
+O contexto da pesquisa, a notação matemática e a terminologia adotadas e a revisão da literatura das áreas
+envolvidas neste trabalho são apresentados no Capítulo \ref{contexto}.
 No Capítulo \ref{propostas},
 são apresentadas as propostas de algoritmos.
 O Capítulo \ref{metodologia} contém os métodos de avaliação e detalhes de
