--- a/plot.tex
+++ b/plot.tex
@@ -33,7 +33,7 @@ scale only axis, width=300, yticklabel style={/pgf/number format/fixed}]
 % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaall.plot};\addlegendentry{TUeuc}
 % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaall.plot};\addlegendentry{LUeuc}
 
-\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaall.plot};\addlegendentry{DWeuc}
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaall.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
