--- a/contexto.tex
+++ b/contexto.tex
@@ -1,4 +1,36 @@
 \chapter{Contexto} \label{contexto}
+Neste capítulo, são introduzidos os temas pertinentes a esta tese.
+Na Seção \ref{apsup},
+a classificação em aprendizado de máquina é apresentada.
+O assunto central, que engloba o aprendizado ativo e suas principais estratégias,
+é introduzido nas seções \ref{aprendizado-ativo} e \ref{estrategias}.
+A Seção \ref{notacao} antecede a exposição das estratégias visando
+definir a notação adotada na descrição delas e no restante do documento.
+Na Seção \ref{elmorig}, as \elms são especificamente detalhadas por serem os algoritmos
+de aprendizado mais recentes dentre os empregados, pela sua ausência na literatura de
+aprendizado ativo e pelo desenvolvimento de uma estratégia específica para ela (Capítulo \ref{proposta}).
+Finalmente, na Seção \ref{meta}, é feita uma breve revisão sobre meta-aprendizado.
+\ano{os outros classificadores vão ser mencionados
+neste capítulo ou só a partir do cap. de metodologia?}
+% O foco deste trabalho está no problema de se lidar com a variedade
+% existente de estratégias de aprendizado ativo e suas eventuais
+% afinidades com diferentes domínios de aplicação e algoritmos de aprendizado.
+% 
+% Com esse intuito,
+% vários algoritmos comumente usados para classificação foram adotados.
+% Adicionalmente,
+% um tipo de algoritmo, até onde alcança o conhecimento do autor,
+% nunca utilizado para aprendizado ativo foi adotado.
+% Esse algoritmo, chamado de \elm, é descrito na Seção \ref{elm}
+% juntamente com algumas de suas variações.
+% Complementarmente à tarefa de escolha manual da estratégia mais adequada para um
+% dado problema, um esquema automático de recomendação de estratégias
+% baseado em meta-aprendizado foi empregado - abordagem possivelmente sem
+% precedentes na literatura.
+% Dessa forma, uma introdução ao meta-aprendizado é o assunto da
+% Seção \ref{meta}.
+
+\section{Classificação}\label{apsup}
 Algumas habilidades humanas vêm claramente programadas geneticamente
 e outras são apenas a execução de passos memorizados,
 como é, respectivamente, o caso da amamentação e o trabalho efetuado numa
@@ -22,8 +54,8 @@ aprender - construir modelos - sem
 programação explícita \citep{journals/cacm/Valiant84}.
 Diversas tarefas como \ano{tarefa de máquina 1, tarefa2, ... REFERENCIA}
 têm sido bem sucedidas atualmente.
-Entretanto, durante a construção do modelo, é preciso saber que
-parte dos dados é relevante.
+Entretanto, durante a construção do modelo, é desejável saber
+que parte dos dados é relevante.
 Esse é um problema em aberto que pode ser entendido como uma busca
 pela melhor maneira de amostragem dos dados
 na etapa que antecede o treinamento do algoritmo.
@@ -34,65 +66,6 @@ papel de supervisor.
 Ambos os casos podem se beneficiar do tipo de
 aprendizado denominado \textit{ativo} - apresentado
 na Seção \ref{aprendizado-ativo}.
-
-O foco deste trabalho está no problema de se lidar com a variedade
-existente de estratégias de aprendizado ativo e suas eventuais
-afinidades com diferentes domínios de aplicação e algoritmos de aprendizado.
-
-Com esse intuito,
-vários algoritmos comumente usados para classificação foram adotados.
-Adicionalmente,
-um tipo de algoritmo, até onde alcança o conhecimento do autor,
-nunca utilizado para aprendizado ativo foi adotado.
-Esse algoritmo, chamado de \elm, é descrito na Seção \ref{elm}
-juntamente com algumas de suas variações.
-Complementarmente à tarefa de escolha manual da estratégia mais adequada para um
-dado problema, um esquema automático de recomendação de estratégias
-baseado em meta-aprendizado foi empregado - abordagem possivelmente sem
-precedentes na literatura.
-Dessa forma, uma introdução ao meta-aprendizado é o assunto da
-Seção \ref{meta}.
-
-
-\section{Terminologia e notação}\label{notacao}
-\esb{$A(X)$ é o conjunto de atributos que definem todos os valores de cada tupla
-$\bm{x}\in X$}
-
-\ano{pegar notação do kalousis}
-
-O termo \textit{algoritmo de aprendizado} é substituído por \textit{classificador}
-quando se trata do produto do processo, isto é, o modelo capaz de classificar exemplos.
-Durante a indução do modelo, se ele integrar uma estratégia de aprendizado ativo,
-ele é chamado de \textit{aprendiz}.
-Apesar de contradizer o princípio motivador do aprendizado ativo explicitado
-na Seção \ref{aprendizado-ativo},
-existem estratégias sem aprendiz - chamadas \textit{agnósticas}.
-Cada \textit{consulta} da estratégia ao \textit{oráculo} visa a obtenção
-do \textit{rótulo} que contém a informação de \textit{classe} de um dado exemplo.
-As consultas podem ser \ing{exploratórias}{for exploration}, que buscam maximizar
-a variedade na escolha de exemplos; ou \ing{prospectivas}{for exploitation},
-que se concentram apenas nos casos mais críticos,
-ou seja, com maior \textit{informatividade}.
-O limite de duração para processamento computacional entre consultas
-é chamado \ing{tempo de espera tolerável}{tolerable waiting time},
-pois é o tempo efetivamente sentido pelo oráculo.
-
-\esb{O número de classes é indicado por $|Y|$ e a quantidade inicial de exemplos é
-$|\mathcal{U}|$ - mantendo a notação
-usual de os símbolos $\mathcal{U}$ e $\mathcal{L}$ representarem a
-reserva de exemplos \citep{series/synthesis/2012Settles}
-e o conjunto de exemplos já rotulados, respectivamente.}
-$ID$ densidade de informação
-$TU$ utilidade de treinamento
-$Inf(\bm{x})$ medida de informatividade
-$d(\bm{x},\bm{u})$ medida de distância
-$sim(\bm{x},\bm{u})$ medida de similaridade
-$\cent$ orçamento ou número de consultas
-
-
-
-\red{explicar que vai ser adotada uma notação uniforme que compreenda AL, ELM
- e ap. inc.}
 
  \input active-learning
  \input elm
