--- a/meta.tex
+++ b/meta.tex
@@ -1,7 +1,21 @@
 \newpage
 \section{Meta-aprendizado} \label{meta}
+sugiro
+quebrar o primeiro paragrafo em paragrafos menores e discutir , alem
+de falar como voce fala que alguns trabalhos tratam de recomendacao de
+algoritmos nao supervisionados, falar que as medidas diretas
+frequentemente usam informacao sobre o atributo alvo
+e que para algumas estrategias de recomendacao, como aprendi nao
+supervisionado e aprendizado (assim fazer um gancho para sua tese), eh
+necessario procurar medidas adicionais alem das propostas no statlog
+
+seria interessante mencionar os trabalhos feitos no grupo ainda para
+pre-processamento de dados (Bruno e Luis Paulo) para otimizacao
+(Jorge) e para series de dados (Andre Rossi)
+
+
 Um sistema de classificação baseado em aprendizado de máquina depende
-de um modelo que é induzido por algoritmos de aprendizado (Capítulo \ref{contexto}).
+de um modelo que é induzido por algoritmos de aprendizado (Seção \ref{contexto}).
 Diante da infinidade de vieses possíveis de aprendizado,
 muitos algoritmos têm sido propostos e alguns são frequentemente
 empregados de forma generalizada na solução dos mais diversos problemas,
