--- a/rankplot.tex
+++ b/rankplot.tex
@@ -7,37 +7,77 @@
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 
-\addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
-% \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUmah}}
-\addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
-% \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ALUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUman}}
-\addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
-% \addplot+[solid, thick, orange, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUmah] {kappamediaallReduxRank.plot};\addlegendentry{LUmah}
-\addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
-% \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=LUman] {kappamediaallReduxRank.plot};\addlegendentry{LUman}
+% % budget TUmahRFw TUmanRFw ATUmanRFw MarRFw ATUman5NNa ATUmah5NNa SGmultiRFw ATUmahRFw EERent5NNa TUmah5NNa Rnd5NNa SGmulti5NNa
+% % budget TUmanRFw TUmahRFw GATUApmanRFw ATUmah5NNa ATUman5NNa GATUApman5NNa ATUmanRFw TUmah5NNa ATUmahRFw TUman5NNa
+% \addplot+[violet, dashed, thick, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=Rnd5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNa}}
+% \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndRFw}}
+% \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=Rnd5NNb] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNb}}
+% \addplot+[green, densely dashed, thick, mark options={solid, scale=2.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndNB] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndNB}}
+% \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=RndELM] {kappamediaParesReduxRank.plot};\addlegendentry{RndELM}
+% \addplot+[solid, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=RndC4.5w] {kappamediaParesReduxRank.plot};\addlegendentry{RndC4.5w}
+% \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=RndVFDT] {kappamediaParesReduxRank.plot};\addlegendentry{RndVFDT}
+% \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndCIELM] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndCIELM}}
+% \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=RndSVM] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndSVM}}
+% % \addplot+[dashed, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUmah5NNa}
+% % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=ATUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmahRFw}
+% % \addplot+[solid, blue, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUman5NNa}
+% 
+% % \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=TUmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{TUmanRFw}}
+% % \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=TUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{TUmahRFw}}
+% % \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=GATUApmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{GATUApmanRFw}
+% % \addplot+[solid, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=ATUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmah5NNa}
+% % \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=ATUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{ATUman5NNa}
+% % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=GATUApman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{GATUApman5NNa}}
+% % \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{ATUmanRFw}}
+% % \addplot+[dashed, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUmah5NNa}
+% % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=ATUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmahRFw}
+% % \addplot+[solid, blue, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUman5NNa}
+% 
+% % \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=MarRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{MarRFw}}
+% % \addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=SGmultiRFw] {kappamediaParesReduxRank.plot};\addlegendentry{SGmultiRFw}
+% % \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=EERent5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{EERent5NNa}}
+% % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=Rnd5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNa}}
+% 
+% 
+% % \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
+% % % \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUmah}}
+% % \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
+% % % \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ALUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUman}}
+% % \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
+% % % \addplot+[solid, thick, orange, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUmah] {kappamediaallReduxRank.plot};\addlegendentry{LUmah}
+% % \addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
+% % % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=LUman] {kappamediaallReduxRank.plot};\addlegendentry{LUman}
+% % 
+% % % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUeuc] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUeuc}}
+% % % \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUeuc] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUeuc}}
 
-% \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUeuc] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUeuc}}
-% \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUeuc] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUeuc}}
 
+
+
+
+
+% \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Ent] {kappamediaallReduxRank.plot};\addlegendentry{Ent}
 \addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
 \addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
 \addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
 \addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
-
-\addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
-\addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-
-% \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
-% \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaallReduxRank.plot};\addlegendentry{LUeuc}
-
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATU0man] {kappamediaallReduxRank.plot};\addlegendentry{GATU0man}
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
-\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATU0mah] {kappamediaallReduxRank.plot};\addlegendentry{GATU0mah}
-\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
-
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
+%
+% \addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
+% \addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
+%
+% % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
+% % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaallReduxRank.plot};\addlegendentry{LUeuc}
+%
+\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
+% \addplot+[solid, dark green, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApman] {kappamediaallReduxRank.plot};\addlegendentry{GATUApman}
+\addplot+[solid, violet, thick, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
+% \addplot+[solid, blue, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUApmah}
+%
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=EMC] {kappamediaallReduxRank.plot};\addlegendentry{EMC}
+% \addplot+[solid, dark red, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
 \end{center}
 \end{figure}
+\newpage
