--- a/stratsALCKappaFriedELMRedux.tex
+++ b/stratsALCKappaFriedELMRedux.tex
@@ -1,17 +1,16 @@
 \begin{table}[h]
 \caption{Um contra um (ELM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	& * & * & - &   & * &   &   &   &   &   \\
-4 - EERent	& * & * &   & - & * &   &   &   &   & + \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   &   &   \\
-6 - \textbf{SGmulti}	& + & + &   &   & * & - &   &   &   &   \\ \hline
-7 - TUman	& * & * &   &   & * &   & - & + &   & * \\
-8 - \textbf{ATUman}	&   &   &   &   & + &   &   & - &   &   \\ \hline
-9 - TUmah	& * & * &   &   & * &   &   &   & - &   \\
-10 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
+1 - Rnd  	& - &   &   &   &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   &   &   &   \\ \hline
+3 - EERent	& * & * & - & * &   &   &   &   & + \\
+4 - EERacu	&   &   &   & - &   &   &   &   &   \\ \hline
+5 - \textbf{SGmulti}	& + & * &   & * & - &   &   &   &   \\
+6 - TUman	& * & * &   & * &   & - & + &   & * \\ \hline
+7 - \textbf{ATUman}	&   &   &   & + &   &   & - &   &   \\
+8 - TUmah	& * & * &   & * &   &   &   & - &   \\ \hline
+9 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   & - \\\end{tabular}
 \label{stratsALCKappaFriedELMRedux}
 \end{center}
 \end{table}
