--- a/tese.tex
+++ b/tese.tex
@@ -19,6 +19,7 @@
 \DeclareMathOperator*{\sd}{sd}
 \DeclareMathOperator*{\en}{en}
 \DeclareMathOperator*{\co}{co}
+\DeclareMathOperator*{\dime}{dim}
 
 \newcommand{\meutitulo}{Aprendizado ativo ... }
 \newcommand{\meunome}{Davi Pereira dos Santos}
