--- a/elm.tex
+++ b/elm.tex
@@ -36,14 +36,9 @@ cujos nós podem ser neurais (aditivo logístico sigmoidal) - como neste trabalho 
 ou de diversos outros tipos, como as também frequentemente usadas funções de base radial
 \citep{journals/tsmc/HuangZDZ12}.
 
-Dados $Y$ o conjunto de vetores que representam todas as classes possíveis;
-$\bm{x}_{(t)}$, um vetor de atributos descritivos pertencentes a um exemplo cuja classe se deseja
-descobrir no instante $t \in \mathbb{N}$;
-e $\bm{y}_{(t)} \in Y$, seu vetor associado de atributos preditivos que é uma representação
-binária em que os valores respeitam a restrição de que para uma classe com
-índice correspondente $o$,
-$y_o=1$ e $y_p=0 \forall o \neq p, 1 \leq p \leq |Y|$;
-a função preditiva de uma SLFN com $L$ neurônios ocultos pode ser representada como segue:
+\ano{relembrar leitor da notação?}
+
+A função preditiva de uma SLFN com $L$ neurônios ocultos pode ser representada como segue:
 \begin{equation} \label{eqelm}
 f(\bm{x}_{(t)})= \argmax_{\bm{y} \in Y}{\displaystyle\mathop{\sum} _{l=1}^{L}\beta_{l,c(\bm{y})}
 g(\bm{a}_l \bm{x}_{(t)} + b_l)} = \bm{y}_{(t)}
