--- a/notacao.tex
+++ b/notacao.tex
@@ -12,9 +12,55 @@ Apesar de contradizer o princípio motivador do aprendizado ativo explicitado
 na Seção \ref{aprendizado-ativo},
 existem estratégias sem aprendiz - chamadas \textit{agnósticas}.
 Cada \textit{consulta} de uma dada estratégia ao \textit{oráculo} visa a obtenção
-do \textit{rótulo} que indica a \textit{classe} $\bm{y}$ de um dado exemplo dentre um
-conjunto limitado $Y$ delas. Assim, o número de classes é indicado por $|Y|$.
+do \textit{rótulo} que indica a \textit{classe} de um dado exemplo.
+A classe $c$ pertence ao conjunto de classes possíveis $C$ para um dado problema e
+é representada por um vetor binário $\bm{y} \in Y$, sendo $Y$ formalmente definido pela Equação \ref{ydef}.
+\begin{equation}\label{ydef}
+ Y = \{\bm{y} \mid y_o=1, y_p=0 \forall o \neq p, 1 \leq p \leq |C|\}
+\end{equation}
+A representação binária do vetor de atributos preditivos $\bm{y}$
+tem valores que respeitam a restrição de que apenas uma classe é aceita por exemplo.
 
+O subscrito $(t), t \in \mathbb{N}$ é usado quando o contexto exige situar o aprendizado
+no tempo, na medida em que a quantidade de exemplos aumenta um a um.
+Os atributos descritivos de um exemplo é dado por uma tupla (ou vetor, quando o contexto for de álgebra linear)
+$\bm{x}$ pertencente ao conjunto $X$ de exemplos possíveis.
+Dessa forma, a representação completa de um exemplo é um par \ano{dupla/tupla?}
+$\langle \bm{x}_{(t)}, \bm{y}_{(t)} \rangle$.
+
+$A$ é o conjunto de atributos descritivos.
+Cada atributo $\bm{a} \in A$ é o conjunto de todos os valores que cada posição
+$p \in \{x_i \mid 1 \leq i < \dime{\bm{x}}\}$ da tupla/vetor $\bm{x}$ pode assumir,
+por exemplo $\bm{a}=\{\textit{alto},\textit{medio},\textit{baixo}\}$ e $p=medio$ ou
+$\bm{a} = \mathbb{R}$ e $p=3.7$.
+O tipo de atributo é dado pela função $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
+atributos nominais e $0$ para atributos numéricos.
+
+\ano{trazer do apend4 mais notacao}
+
+\begin{itemize}
+ \item $\X$ - conjunto de tuplas de atributos descritivos (numéricos e nominais),
+    ou seja, todos os exemplos matematicamente possíveis (sem informação de classe);
+  \item $\x \in \X$ - tupla de atributos que descrevem um exemplo;
+  \item $\Y$ - conjunto de vetores em notação \tra{um-de-n}{one-hot encoding}
+    (\cite{Harris:2007:DDC}) que representa todas as classes possíveis,
+    por exemplo: $\Y=\{(0,0,1),(0,1,0),(1,0,0)\}$;
+  \item $\y \in Y$ - vetor de atributos que classificam um exemplo;
+  \item $\yt$,$\xt$ - o subscrito $t \in \mathbb{N}$ indica que o exemplo
+    é parte de uma sequência para aprendizado incremental;
+%  $o$, $y_o=1$ e $y_p=0 \forall o \neq p, 1 \leq p \leq |Y|$;
+
+  \item $\U$ - \pool inicial;
+  \item $\Ut$ - \pool no instante $t$;
+  \item $\Lt$ - conjunto de exemplos já rotulados no instante $t$.
+\end{itemize}
+
+  \begin{equation}
+h: \mathcal{D} \rightarrow \{-,+\}
+\end{equation}
+
+% Assim, o domínio de uma dado problema de classificação é definido pela tupla
+% $\{X,Y,A\}$
 As consultas podem ser \ing{exploratórias}{for exploration}, que buscam maximizar
 a variedade na escolha de exemplos; ou \ing{prospectivas}{for exploitation},
 que se concentram apenas nos casos mais críticos,
@@ -23,9 +69,7 @@ O limite de duração para processamento computacional entre consultas
 é chamado \ing{tempo de espera tolerável}{tolerable waiting time},
 pois é o tempo efetivamente sentido pelo oráculo.
 
-\esb{$A(X)$ é o conjunto de atributos.
-Cada atributo $\bm{a} \in A$ é o conjunto de todos os valores que cada tupla
-$\bm{x}\in X$ pode assumir.}
+
 
 
 \esb{ e a quantidade inicial de exemplos é
